Fix the text in the buttons is shifted to the right

--- a/src/assets/scss/md/_buttons.scss
+++ b/src/assets/scss/md/_buttons.scss
@@ -22,7 +22,9 @@
         text-transform: unset!important;
     }
 
-  &:not(.md-just-icon):not(.md-btn-fab):not(.md-icon-button):not(.md-toolbar-toggle) .md-ripple{
+  &:not(.md-just-icon):not(.md-btn-fab):not(.md-icon-button):not(.md-toolbar-toggle):not(.choose-file-button) .md-ripple{
+    width: fit-content;
+    height: fit-content;
     padding: 12px 30px;
   }
 
